--- a/transformations.tex
+++ b/transformations.tex
@@ -1316,6 +1316,266 @@ Refer to the atomics in Figure~\ref{FigFlowBreak}.
 
 \subsection{Unnamed Transformation}
 
+\TODO{Change this introduction}
+
+%\newcommand{\Gammasf}{\mathsf\Gamma}
+We present here the main construction of this paper, \emph{i.e.}, a class of derivations $\Gammasf$ that only depend on a given set of atoms and that allow us to normalise any proof containing those atoms. The complexity of the $\Gammasf$ derivations dominates the complexity of the normal proof, and is due to the complexity of certain `threshold formulae', on which the $\Gammasf$ derivations are based. The $\Gammasf$ derivations are constructed in Definition~\ref{DefThrDer}; this directly leads to Theorem~\ref{TheoThrDer}, which states a crucial property of the $\Gammasf$ derivations and which is the main result of this section.
+
+\subsubsection{Threshold Formulae}
+
+Threshold formulae realise boolean threshold functions, which are defined as boolean functions that are true if and only if at least $k$ of $n$ inputs are true (see \cite{Wege:87:The-Comp:vn} for a thorough reference on threshold functions). 
+
+\TODO{Define $\lfloor x\rfloor$.}
+%In the following, $\lfloor x\rfloor$ denotes the maximum integer $n$ such that $n\le x$.
+
+There are several ways of encoding threshold functions into formulae, and the problem is to find, among them, an encoding that allows us to obtain Theorem~\ref{TheoThrDer}. Efficiently obtaining the property stated in Theorem~\ref{TheoThrDer} crucially depends also on the proof system we adopt.
+
+\newpage
+
+\begin{remark}
+Consider the derivation
+\[
+\vlder{\Phi}{}
+{
+ \vls[\beta\;.\;\vlinf{}{}{\fff}{\vls(a_1.\bar a_1)}\;.\;\vlinf{}{}{\fff}{\vls(a_n.\bar a_n)}]
+}
+{
+ \vls(\vlinf{}{}{\vls[a_1.\bar a_1]}{\ttt}\;.\;\vlinf{}{}{\vls[a_n.\bar a_n]}{\ttt}\;.\;\alpha)
+}\quad,
+\]
+which is on simple form with respect to the polarity assignment $\pi$, such that, for every $1\le i\le n$, $\bar a_i$ maps to a positive non-weakly-streamlined subflow. By studying the atomic flow of $\Phi$ we can observe that, for some threshold formulae $\th{k}{n-1}\avec{2}{n}$, $\dots$ $\th{k}{n-1}\avec{1}{n-1}$ the following derivation exists
+\[
+\Psi\quad=\quad
+\vlder{\Phi\{\bar a_1/\th{k}{n-1}\avec{2}{n},\dots,\bar a_n/\th{k}{n-1}\avec{1}{n-1}\}}{}
+{
+ \vls
+ [
+  \beta.(a_1.\th{k}{n-1}\avec{2}{n}).\cdots.(a_n.\th{k}{n-1}\avec{1}{n-1})
+ ]
+}
+{
+ \vls
+ (
+  [a_1.\th{k}{n-1}\avec{2}{n}].\cdots.[a_n.\th{k}{n-1}\avec{1}{n-1}].\alpha
+ )
+}\quad.
+\]
+
+By observing that 
+\[
+\th{k}{n}\avec{1}{n}=\vls[(a_1.\th{k-1}{n-1}\avec{2}{n}).\cdots.(a_n.\th{k-1}{n-1}\avec{1}{n-1})]=\vls([a_1.\th{k}{n-1}\avec{2}{n}].\cdots.[a_n.\th{k}{n-1}\avec{1}{n-1}])
+\quad,
+\]
+we know there exists a derivation
+\[
+\vlder{}{}
+{
+ \vls([a_1.\th{k}{n-1}\avec{2}{n}].\cdots.[a_n.\th{k}{n-1}\avec{1}{n-1}])
+}
+{
+ \vls[(a_1.\th{k-1}{n-1}\avec{2}{n}).\cdots.(a_n.\th{k-1}{n-1}\avec{1}{n-1})]
+}
+\]
+
+Since $\th{0}{n-1}\avec{2}{n}=\cdots=\th{0}{n-1}\avec{1}{n-1}=\ttt$ and $\th{n}{n-1}\avec{2}{n}=\cdots=\th{n}{n-1}\avec{1}{n-1}=\fff$, we can compose the above derivations to create
+\[
+\vlder{}{}
+{
+ \vls[\beta\;.\;(\vlinf{\awu}{}{\ttt}{a_1}\;.\;\fff)\;.\;\cdots\;.\;(\vlinf{\awu}{}{\ttt}{a_n}\;.\;\fff)]
+}
+{
+ \vls([\vlinf{\awd}{}{a_1}{\fff}\;.\;\ttt]\;.\;\cdots\;.\;[\vlinf{\awd}{}{a_n}{\fff}\;.\;\ttt]\;.\;\alpha)
+}
+\quad.
+\]
+
+The challenge is, for every $1\le k\le n+1$, to find $\th{k}{n}\avec{1}{n}$ and, for every $1\le i\le n$, to find $\th{k}{n-1}\langle a_1,\dots,a_{i-1},a_{i+1},\dots,a_n\rangle$, such that the resulting derivation is weakly streamlined with respect to $\pi$.
+\end{remark}
+
+The following class of threshold formulae, which we found to work for system $\SKS$, is a simplification of the one adopted in \cite{AtseGalePudl:02:Monotone:yu}.
+
+\renewcommand{\th}[2]{\mathop{\thetaup_{#1}^{#2}}}
+%-------------------------------------------------------------------------------
+\begin{definition}
+Consider $n>0$, distinct atoms $a_1$, \dots, $a_n$, and let $p=\lfloor n/2\rfloor$ and $q=n-p$; for $k\ge0$, we define the \emph{threshold formulae\/} $\th kn\avec1n$ as follows:
+\begin{itemize}
+%---------------------------------------
+\item for any $n>0$ let $\th0n\avec1n\equiv\ttt$;
+%---------------------------------------
+\item for any $n>0$ and $k>n$ let $\th kn\avec1n\equiv\fff$;
+%---------------------------------------
+\item $\th11(a_1)\equiv a_1$;
+%---------------------------------------
+\item for any $n>1$ and $0<k\le n$ let
+$\th kn\avec1n\equiv\bigvee_{\begin{subarray}{l}i+j=k      \\ 
+                                                0\le i\le p\\ 
+                                                0\le j\le q
+                             \end{subarray}}
+\vlsbr(\th ip\avec1p.\th jq\avec{p+1}n)$.
+%---------------------------------------
+\end{itemize}
+\end{definition}
+
+See, in Figure~\ref{FigThrEx}, some examples of threshold formulae.
+
+The only reason why we require atoms to be distinct in threshold formulae is to avoid certain technical problems with substitutions in the definition of cut-free form, later on. However, there is no substantial difficulty in relaxing this definition to any set of atoms.
+
+%-------------------------------------------------------------------------------
+\begin{figure}
+\vlsmallbrackets
+\begin{eqnarray*}
+%---------------------------------------
+\th02(a,b)&\equiv&\ttt
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th12(a,b)&\equiv&\vls[({\vlnos\th11(a)}.{\vlnos\th01(b)}).
+                       ({\vlnos\th01(a)}.{\vlnos\th11(b)})]
+           \equiv     [(a.\ttt).(\ttt.b)]\\
+          &=     &\vls [a      .      b ]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th22(a,b)&\equiv&\vls({\vlnos\th11(a)}.{\vlnos\th11(b)})\\
+          &\equiv&\vls(a.b)
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th03(a,b,c)&\equiv&\ttt
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th13(a,b,c)&\equiv&\vls[({\vlnos\th11(a)}.{\vlnos\th02(b,c)}).
+                         ({\vlnos\th01(a)}.{\vlnos\th12(b,c)})]
+             \equiv     [(a.\ttt).(\ttt.[(b.\ttt).(\ttt.c)])]\\
+            &=     &\vls[a.b.c]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th23(a,b,c)&\equiv&\vls[({\vlnos\th11(a)}.{\vlnos\th12(b,c)}).
+                    ({\vlnos\th01(a)}.{\vlnos\th22(b,c)})]\\
+            &=     &\vls[(a.[b.c]).(b.c)]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th33(a,b,c)&\equiv&\vls({\vlnos\th11(a)}.{\vlnos\th22(b,c)})
+             \equiv     [(a.(b.c))]\\
+            &=     &\vls(a.b.c)
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th05(a,b,c,d,e)&\equiv&\ttt
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th15(a,b,c,d,e)&\equiv&\vls[({\vlnos\th12(a,b)}.{\vlnos\th03(c,d,e)}).
+                             ({\vlnos\th02(a,b)}.{\vlnos\th13(c,d,e)})]\\
+                &=     &\vls[a.b.c.d.e]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th25(a,b,c,d,e)&\equiv&\vls[({\vlnos\th22(a,b)}.{\vlnos\th03(c,d,e)}).
+                             ({\vlnos\th12(a,b)}.{\vlnos\th13(c,d,e)}).
+                             ({\vlnos\th02(a,b)}.{\vlnos\th23(c,d,e)})]\\
+                &=     &\vls[(a.b                                    ).
+                             ([a.b]             .[c.d.e]             ).
+                                                 (c.[d.e]).(d.e)      ]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th35(a,b,c,d,e)&\equiv&\vls[({\vlnos\th22(a,b)}.{\vlnos\th13(c,d,e)}).
+                             ({\vlnos\th12(a,b)}.{\vlnos\th23(c,d,e)}).
+                             ({\vlnos\th02(a,b)}.{\vlnos\th33(c,d,e)})]\\
+                &=     &\vls[(a.b               .[c.d.e]             ).
+                             ([a.b]             .[(c.[d.e]).(d.e)]   ).
+                                                 (c.d.e)              ]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th45(a,b,c,d,e)&\equiv&\vls[({\vlnos\th22(a,b)}.{\vlnos\th23(c,d,e)}).
+                             ({\vlnos\th12(a,b)}.{\vlnos\th33(c,d,e)})]\\
+                &=     &\vls[(a.b               .[(c.[d.e]).(d.e)]   ).
+                             ([a.b]             .c.d.e               )]
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th55(a,b,c,d,e)&\equiv&\vls({\vlnos\th22(a,b)}.{\vlnos\th33(c,d,e)})\\
+                &=     &\vls(a.b.c.d.e)
+\quad,\\
+\noalign{\medskip}
+%---------------------------------------
+\th65(a,b,c,d,e)&\equiv&\fff
+\quad.
+\end{eqnarray*}
+\caption{Examples of threshold formulae.}
+\label{FigThrEx}
+\end{figure}
+
+The formulae for threshold functions adopted in \cite{AtseGalePudl:02:Monotone:yu} correspond, for each choice of $k$ and $n$, to $\bigvee_{i\ge k}\th in\avec1n$. We presume that \cite{AtseGalePudl:02:Monotone:yu} employs these more complicated formulae because the formalism adopted there, the sequent calculus, is less flexible than deep inference, requiring more information in threshold formulae in order to construct suitable derivations.
+
+%-------------------------------------------------------------------------------
+\begin{remark}
+For $n>0$, we have $\th1n\avec1n=\vls[a_1.\vldots.a_n]$ and $\th nn\avec1n=\vls(a_1.\vldots.a_n)$.
+\end{remark}
+
+The size of the threshold formulae dominates the cost of the normalisation procedure, so, we evaluate their size. We leave as an exercise the proof of the following proposition.
+
+%-------------------------------------------------------------------------------
+\begin{proposition}\label{PropQuasAux}
+For any $n>0$ and $k\ge0$, $\size{\th kn\avec1n}\le\size{\th{\lfloor n/2\rfloor+1}n\avec1n}$.
+\end{proposition}
+
+%-------------------------------------------------------------------------------
+\begin{lemma}\label{LemmaQuas}
+The size of\/ $\th{\lfloor n/2\rfloor+1}n\avec1n$ is $n^{\Ord{\log n}}$.
+\end{lemma}
+
+%-------------------------------------------------------------------------------
+\begin{proof}
+Observe that $\size{\th kn\avec1n}\le\size{\th k{n+1}\avec1{n+1}}$. Let $p=\lfloor n/2\rfloor$ and $q=n-p$ and consider:
+\begin{equation}\label{PropQuasIneq}
+\begin{split}
+\size{\th{p+1}n\avec1n}
+&=\textstyle\sum_{\begin{subarray}{l}i+j=p+1    \\
+                                     0\le i\le p\\
+                                     0\le j\le q
+                  \end{subarray}}
+  \left(\size{\th ip\avec1p}+
+        \size{\th jq\avec{p+1}n}\right)             \\
+&\le\textstyle\sum_{\begin{subarray}{l}i+j=p+1\\
+                                       0\le i,j\le q
+                    \end{subarray}}
+  \left(\size{\th iq\avec1q}+
+        \size{\th jq\avec1q}\right)                 \\
+&\le2(q+1)
+  \size{\th{\lfloor q/2\rfloor+1}q\avec1q}\quad,
+\end{split}
+\end{equation}
+where we use Proposition~\ref{PropQuasAux}. We show that, for $h=2/(\log3-\log2)$ and for any $n>0$, we have $\size{\th{\lfloor n/2\rfloor+1}n\avec1n}\le n^{h\log n}$. We reason by induction on $n$; the case $n=1$ trivially holds. By the inequality~\eqref{PropQuasIneq}, and for $n>1$, we have
+\begin{equation*}
+\begin{split}
+\size{\th{\lfloor n/2\rfloor+1}n\avec1n}
+&\le2(n-\lfloor n/2\rfloor+1)
+     (n-\lfloor n/2\rfloor)^{h\log(n-\lfloor n/2\rfloor)}       \\
+&\le n^2n^{h\log(2n/3)}=n^{h\log n-h(\log3-\log2)+2}=n^{h\log n}
+\quad.
+\end{split}
+\end{equation*}
+\end{proof}
+
+%-------------------------------------------------------------------------------
+\begin{theorem}\label{TheoQuas}
+For any $k\ge0$ the size of\/ $\th kn\avec1n$ is $n^{\Ord{\log n}}$.
+\end{theorem}
+
+%-------------------------------------------------------------------------------
+\begin{proof}
+It immediately follows from Proposition~\ref{PropQuasAux} and Lemma~\ref{LemmaQuas}.
+\end{proof}
+
+
+\subsubsection{Quasipolynomial Reduction}
+
 \TODO{Either rephrase this in terms of an atomic flow transformation and a soundness proof or move it away from here.}
 
 \TODO{Define for derivations instead of proofs. Use simple form of derivations with respect to a polarity assignment. Use the decomposed normal form, yet to be given a name, for derivations.}
