--- a/thesis.tex
+++ b/thesis.tex
@@ -119,6 +119,7 @@
 \input{propositional_classical.tex}
 %\input{modal.tex}
 \part{Atomic Flows}
+\TODO{Isomorphism}
 \input{flows.tex}
 \input{normal_forms.tex}
 \input{flows_and_derivations.tex}
