--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -56,6 +56,8 @@ An atomic flow is \emph{weakly streamlined} if it can be represented as
 A weakly streamlined atomic flow with no upper (resp., lower) edges is called \emph{weakly cut-free} (reps., \emph{weakly interaction-free}).
 \end{definition}
 
+\TODO{Decide on `boxes with weakenings' v.\ `repeated weakenings'.}
+
 %---------------------------------------
 \begin{definition}
 An atomic flow is \emph{streamlined} if it can be represented as
@@ -163,6 +165,40 @@ An atomic flow is \emph{super streamlined} if it can be represented as
 \end{definition}
 
 %---------------------------------------
+\begin{proposition}
+A super streamlined atomic flow with no upper (resp., lower) edges can be represented as
+\[
+\atomicflow{
+( 0, 5.5)*{\copy\interdown};
+( 0, 5.5)*{\affr88};
+%---
+( 0, 0)*{\afvjm3};
+%---
+( 0,-5.5)*{\affr88};
+(-2,-5.5)*{\copy\contrdown};
+( 2,-5.5)*{\copy\contrup};
+%---
+( 0,-11)*{\afvjm3};
+( 8,-8.5)*{\afawdm{}{}{}{}};
+}\quad\mbox{and}\quad
+\atomicflow{
+(-8,8.5)*{\afawum{}{}{}{}};
+( 0,11)*{\afvjm3};
+%---
+(-2, 5.5)*{\copy\contrup};
+( 2, 5.5)*{\copy\contrup};
+( 0, 5.5)*{\affr88};
+%---
+( 0, 0)*{\afvjm3};
+%---
+( 0,-5.5)*{\copy\interup};
+( 0,-5.5)*{\affr88};
+}\quad,
+\]
+respectively.
+\end{proposition}
+
+%---------------------------------------
 \begin{definition}
 An atomic flow is \emph{hyper streamlined} if it can be represented as
 \[
@@ -227,6 +263,8 @@ respectively.
 \end{proposition}
 
 \TODO{Maybe think of a different name than `simple form' (it doesn't look very simple...).}
+
+\TODO{Define the polarity assignment used here.}
 
 %---------------------------------------
 \begin{definition}
@@ -432,7 +470,7 @@ An atomic flow is \emph{weakly streamlined with respect to the polarity assignme
 \]
 \end{definition}
 
-\TODO{Define the inverse of a polarity assignment.}
+\TODO{Define the inverse of a polarity assignment (and change the notation!).}
 
 \begin{proposition}
 Given a polarity assignment $\pi$, an atomic flow which is weakly streamlined with respect to both $\pi$ and $\pi^{-1}$ is weakly streamlined. 
@@ -507,7 +545,7 @@ Given an atomic flow
 ( 45,-12.5)*{\afvjm6};
 }\quad,
 \]
-where, for $1\le i\le n$, $\phi'_i$ and $\phi''_i$ contain no identity and no cut vertices and $\phi_i$ is a connected, non-weakly-streamlined subflow, we define the \emph{core of $\phi$}, denoted $\Core(\phi)$, to be
+where, for $1\le i\le n$, the subflows $\phi'_i$ and $\phi''_i$ contain no identity and no cut vertices and $\phi_i$ is a connected, non-weakly-streamlined subflow, we define the \emph{core of $\phi$}, denoted $\Core(\phi)$, to be
 \[
 \atomicflow
 {
@@ -592,7 +630,7 @@ where, for $1\le i\le n$, $\phi'_i$ and $\phi''_i$ contain no identity and no cu
 ( 45,-13.5)*{\afvjm8};
 }\quad.
 \]
-For every $1\le i\le n$, the \emph{new upper edge of} $\phi'_i$ (resp., $\phi''_i$) is $\lambda'_i$ (resp., $\lambda''_i$), the \emph{new lower edge of} $\phi'_i$ (resp., $\phi''_i$) is $\mu'_i$ (resp., $\mu''_i$) and the \emph{new upper} (resp., \emph{lower}) \emph{edges of} $\phi_i$ are $\lambda'_i$ and $\lambda''_i$ (resp., $\mu'_i$ and $\mu''_i$).
+For every $1\le i\le n$, the \emph{new upper edge of} $\phi'_i$ (resp., $\phi''_i$) \emph{in $\Core{\phi}$} is $\lambda'_i$ (resp., $\lambda''_i$), the \emph{new lower edge of} $\phi'_i$ (resp., $\phi''_i$) \emph{in $\Core{\phi}$} is $\mu'_i$ (resp., $\mu''_i$) and the \emph{new upper} (resp., \emph{lower}) \emph{edges of $\phi_i$ in $\Core{\phi}$} are $\lambda'_i$ and $\lambda''_i$ (resp., $\mu'_i$ and $\mu''_i$).
 We say that $\phi_1$, $\dots$, $\phi_n$ is an \emph{ordered choice of components from $\phi$}.
 \end{definition}
 
